; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/falcon/extr_farch.c_ef4_farch_filter_get_rx_id_limit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/falcon/extr_farch.c_ef4_farch_filter_get_rx_id_limit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ef4_nic = type { %struct.ef4_farch_filter_state* }
%struct.ef4_farch_filter_state = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@EF4_FARCH_FILTER_MATCH_PRI_COUNT = common dso_local global i32 0, align 4
@ef4_farch_filter_range_table = common dso_local global i32* null, align 8
@EF4_FARCH_FILTER_INDEX_WIDTH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ef4_farch_filter_get_rx_id_limit(%struct.ef4_nic* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ef4_nic*, align 8
  %4 = alloca %struct.ef4_farch_filter_state*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ef4_nic* %0, %struct.ef4_nic** %3, align 8
  %7 = load %struct.ef4_nic*, %struct.ef4_nic** %3, align 8
  %8 = getelementptr inbounds %struct.ef4_nic, %struct.ef4_nic* %7, i32 0, i32 0
  %9 = load %struct.ef4_farch_filter_state*, %struct.ef4_farch_filter_state** %8, align 8
  store %struct.ef4_farch_filter_state* %9, %struct.ef4_farch_filter_state** %4, align 8
  %10 = load i32, i32* @EF4_FARCH_FILTER_MATCH_PRI_COUNT, align 4
  %11 = sub nsw i32 %10, 1
  store i32 %11, i32* %5, align 4
  br label %12

12:                                               ; preds = %41, %1
  %13 = load i32*, i32** @ef4_farch_filter_range_table, align 8
  %14 = load i32, i32* %5, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %6, align 4
  %18 = load %struct.ef4_farch_filter_state*, %struct.ef4_farch_filter_state** %4, align 8
  %19 = getelementptr inbounds %struct.ef4_farch_filter_state, %struct.ef4_farch_filter_state* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = load i32, i32* %6, align 4
  %22 = zext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %40

27:                                               ; preds = %12
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* @EF4_FARCH_FILTER_INDEX_WIDTH, align 4
  %30 = shl i32 %28, %29
  %31 = load %struct.ef4_farch_filter_state*, %struct.ef4_farch_filter_state** %4, align 8
  %32 = getelementptr inbounds %struct.ef4_farch_filter_state, %struct.ef4_farch_filter_state* %31, i32 0, i32 0
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = load i32, i32* %6, align 4
  %35 = zext i32 %34 to i64
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i64 %35
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = or i32 %30, %38
  store i32 %39, i32* %2, align 4
  br label %46

40:                                               ; preds = %12
  br label %41

41:                                               ; preds = %40
  %42 = load i32, i32* %5, align 4
  %43 = add i32 %42, -1
  store i32 %43, i32* %5, align 4
  %44 = icmp ne i32 %42, 0
  br i1 %44, label %12, label %45

45:                                               ; preds = %41
  store i32 0, i32* %2, align 4
  br label %46

46:                                               ; preds = %45, %27
  %47 = load i32, i32* %2, align 4
  ret i32 %47
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
